# BAZA

./: lab2.odt  lab4.docx  lab5.odt  Диаграмма без названия.drawio  ЛБ1_Тихонов_ооп.odt  Саша.html  лаба3_ооп.odt  проба (1).html  проба.html
Tikhonov_lb1/: ООП_ТИХОНОВ_0382.odt
Tikhonov_lb1/untitled2/: CMakeLists.txt  Cells.cpp  Cells.h  Field.cpp  Field.h  main.cpp  n.cpp  sfml-app
game_v3/: CMakeLists.txt  Draw.cpp  Draw.h  main.cpp  start.cpp  start.h
game_v3/Create/: Bcreate.cpp  Bcreate.h  Kcreate.h  Kreate.cpp  Ocreate.h  Wcreate.cpp  Wcreate.h
game_v3/LIve/: PLAYER.cpp
game_v3/LIve/InterfaceUnit/: LiveType.h
game_v3/LIve/Things/: Apple_tree.h  Bonusheal.cpp  Bonusheal.h  Hil.cpp  Hil.h  Power.cpp  Power.h  sword.cpp  sword.h
game_v3/LIve/enemy/: BARBARIAN.cpp  BARBARIAN.h  Car.cpp  Car.h  Children.cpp  Children.h  KNIGHT.cpp  KNIGHT.h  Redneck.cpp  Redneck.h  WARIOR.cpp  WARIOR.h
game_v3/Move/: Move.cpp  Move.h
game_v3/map/: Cell.cpp  Cell.h  field.cpp  field.h
game_v3000/: CMakeLists.txt  main.cpp  start.cpp  start.h
game_v3000/Interface/: Interface.cpp  Interface.h
game_v3000/bilder/: fieldbildertree.cpp
game_v3000/element`s/: Item.h
game_v3000/map/: Cell.cpp  Cell.h  field.cpp  field.h
game_v3_lb1/: CMakeLists.txt  main.cpp  start.cpp
game_v3_lb1/bilder/: fielddirector.cpp
game_v3_lb1/element`s/: Enum.h
game_v3_lb1/map/: Cell.cpp
game_v3_lb2/: CMakeLists.txt  Draw.cpp  Draw.h  main.cpp  start.cpp  start.h
game_v3_lb2/Create/: CarCreate.h  ChiCreate.h  RedCreate.h
game_v3_lb2/LIve/: PLAYER.cpp  PLAYER.h
game_v3_lb2/Move/: Move.cpp  Move.h
game_v3_lb2/bilder/: fieldbildertree.cpp
game_v3_lb2/map/: Cell.cpp  Cell.h  field.h
game_v3_lb3/: CMakeLists.txt  start.cpp  start.h
game_v3_lb3/Create/: Kreate.cpp
game_v3_lb3/Draw/: Draw.h
game_v3_lb3/LIve/: PLAYER.h
game_v3_lb3/Loger/: ConsoleLogger.h  Decorator.cpp  Observer.h
game_v3_lb3/Move/: Move.cpp  Move.h
game_v3_lb3/map/: Cell.cpp  Cell.h  field.cpp  field.h
game_v3_lb4/Create/: CarCreate.cpp
game_v3_lb4/Draw/: Draw.cpp
game_v3_lb4/LIve/: PLAYER.cpp
game_v3_lb4/Loger/: ConcreteLog.h  Decorator.h  Logger.cpp  Logger.h  LoggerImplication.h
game_v3_lb4/Move/: Move.cpp  Move.h
game_v3_lb4/Rules/: RulesEnemy.h
game_v3_lb4/bilder/: fieldbildertree.h
game_v3_lb4/map/: field.h
game_v3_lb5/: CMakeLists.txt  NewStart.h  main.cpp  start.h
game_v3_lb5/Create/: CarCreate.h  ChiCreate.h  RedCreate.cpp
game_v3_lb5/LIve/: PLAYER.cpp
game_v3_lb5/Loger/: FileLogger.cpp
game_v3_lb5/Move/: Move.cpp  Move.h
game_v3_lb5/Rules/: RulesThings.h
game_v3_lb5/bilder/: fieldbilder.h  fieldbildertree.cpp
game_v3_lb5/element`s/: Enum.h
game_v3_lb5/map/: field.h
game_v3_lb6/: CMakeLists.txt  NewStart.cpp  main.cpp  start.h
game_v3_lb6/Create/: RedCreate.h
game_v3_lb6/Draw/: Draw.cpp  Draw.h
game_v3_lb6/LIve/: PLAYER.h  (+1 more)
lab2_v2/game_v2/: Batle.cpp  CMakeLists.txt  Cell.cpp  Cell.h  Enemy.cpp  Enemy.h  Enum.h  Item.cpp  Item.h  Move_Enemy.cpp  Move_player.cpp  Player.h  field.cpp  field.h  fieldbilder.h  fieldbildertree.cpp  fieldbildertree.h  main.cpp  start.cpp  start.h
lab2_v2/game_v2/ytt/: Enemy.cpp  Enemy.h  Enum.h  Item.cpp  Item.h  Player.cpp  Player.h
(+91 files in other folders)
