cmake_minimum_required(VERSION 3.20)
project(untitled3)

set(CMAKE_CXX_STANDARD 14)

add_executable(untitled3 main.cpp map/Cell.cpp map/Cell.h map/field.cpp map/field.h bilder/fieldbilder.h bilder/fieldbildertree.h bilder/fieldbildertree.cpp bilder/fielddirector.cpp bilder/fielddirector.h start.cpp start.h element`s/Enum.h  Live/InterfaceUnit/LiveType.h)
