cmake_minimum_required(VERSION 3.20)
project(untitled3)

set(CMAKE_CXX_STANDARD 14)

add_executable(untitled3 main.cpp Cell.cpp Cell.h field.cpp field.h fieldbilder.h fieldbildertree.h fieldbildertree.cpp fielddirector.cpp fielddirector.h start.cpp start.h Player.h Enum.h Player.cpp Enemy.cpp Enemy.h Item.h Item.cpp Move_player.cpp Batle.cpp Move_Enemy.cpp)
